objects/tspa__SessionTypeMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will have Visual Remote Assistant - Session Type Mapping Configuration</description>
    <fields>
        <fullName>tspa__ActiveSessionTypeMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveSessionTypeMobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__ActiveSessionTypeTablet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveSessionTypeTablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__ActiveSession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveSessionType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Modified_Value__c</fullName>
        <label>Modified Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Original_Value__c</fullName>
        <label>Original Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Visual Remote Assistant - Session Types</label>
    <listViews>
        <fullName>tspa__All1</fullName>
        <columns>NAME</columns>
        <columns>tspa__Original_Value__c</columns>
        <columns>tspa__Modified_Value__c</columns>
        <columns>tspa__ActiveSession__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>